syntax = "proto3";
option java_package = "com.texture_image.proto";

// Deliver image scale type between Flutter and native
enum BoxFit {
  fill = 0;
  contain = 1;
  cover = 2;
  fitWidth = 3;
  fitHeight = 4;
  none = 5;
}

// Describe image task state
enum ImageTaskState {
  // Task has been created but not start yet
  initialized = 0;

  loading = 1;

  // Task completed successfully
  completed = 2;

  canceled = 3;

  failed = 4 ;
}